many fix and changes

--- a/about_page.html
+++ b/about_page.html
@@ -32,12 +32,12 @@
 </div>
     <div class="container history">
         <div class="block" id="about_company">
-            <p class="block-title">О нашей студии</p>
+            <p class="block__title">О нашей студии</p>
             <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, at! Repellendus unde quasi, repudiandae iusto veniam consequuntur iure facere cum officia repellat, expedita laboriosam voluptatibus, quod ducimus officiis aspernatur animi.</p>
             <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem corrupti labore quae accusamus doloribus fugiat, eius aspernatur animi aut aperiam soluta itaque harum numquam quo ex minima distinctio. Dolores, perspiciatis.</p>
         </div>
         <div class="block">
-            <p class="block-title">Наша команда</p>
+            <p class="block__title">Наша команда</p>
             <div class="section team">
                 <div class="team__developer" id="frontend-dev">
                     <div class="developer__head">
@@ -97,9 +97,46 @@
                 </div>
             </div>
         </div>
-    </div>
+        <div class="block">
+            <p class="block__title">Технологии разработки</p>
+            <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti, voluptas obcaecati culpa porro eveniet corporis necessitatibus non consequatur magnam repellendus accusamus. Soluta nihil odit repudiandae eos vel suscipit reiciendis obcaecati.</p>
+        </div>
+        <div class="section instruments">
+            <div class="instruments__card" id="html-card">
+                <div class="card__icon">
+                    <img src="img/icons/html.svg" alt="" id="card-icon">
+                </div>
+                <p class="card__name">HTML5</p>
+                <p class="card__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores ipsum illo, dolorem quod fugiat quis distinctio facere unde numquam maxime!</p>    
+            </div>
+            <div class="instruments__card" id="sass-card">
+                <div class="card__icon">
+                    <img src="img/icons/sass.svg" alt="" id="card-icon">
+                </div>
+                <p class="card__name">SASS</p>
+                <p class="card__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores ipsum illo, dolorem quod fugiat quis distinctio facere unde numquam maxime!</p>    
+            </div>
+            <div class="instruments__card" id="js-card">
+                <div class="card__icon">
+                    <img src="img/icons/js.svg" alt="" id="card-icon">
+                </div>
+                <p class="card__name">JavaScript</p>
+                <p class="card__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores ipsum illo, dolorem quod fugiat quis distinctio facere unde numquam maxime!</p>    
+            </div>
+            <div class="instruments__card" id="npm-card">
+                <div class="card__icon">
+                    <img src="img/icons/npm.svg" alt="" id="card-icon">
+                </div>
+                <p class="card__name">NPM</p>
+                <p class="card__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores ipsum illo, dolorem quod fugiat quis distinctio facere unde numquam maxime!</p>    
+            </div>
+        </div>
+</div>
 </div>
 <script src="js/main.js"></script>
 <script src="js/scroll.js"></script>
+<div class="footer">
+    <p>footer</p>
+</div>
 </body>
 </html>
