--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="#"><li class="list-el" id="list-el">menu element</li></a>
     </ul>
 </div>
-<div class="wrapper" id="wrapper">
+<div class="wrapper" id="main-wrapper">
     <div id="navigation_bar">
     <div id="logo">
         FrontLab
