--- a/services.html
+++ b/services.html
@@ -34,5 +34,8 @@
 </div>
 <script src="js/main.js"></script>
 <script src="js/scroll.js"></script>
+<div class="footer">
+    <p>footer</p>
+</div>
 </body>
 </html>
