changed colors and add back button in navigation bar

--- a/index.html
+++ b/index.html
@@ -10,19 +10,22 @@
     <script src="https://unpkg.com/scrollreveal@4"></script>
     <title>FrontLand - студия web разработки</title>
 </head>
-<body>
+<body class="body">
 <div class="sidebar" id="sidebar">
     <p class="sidebar-title">Навигация по сайту</p>
     <ul class="menu-list">
         <a href="index.html"><li class="list-el" id="list-el">Главная страница</li></a>
         <a href="about_page.html"><li class="list-el" id="list-el">О компании</li></a>
-        <a href="services.html"><li class="list-el" id="list-el">Наши услуги</li></a>
+        <a href="instruments.html"><li class="list-el" id="list-el">Разработка</li></a>
         <a href="#"><li class="list-el" id="list-el">menu element</li></a>
         <a href="#"><li class="list-el" id="list-el">menu element</li></a>
     </ul>
 </div>
 <div class="wrapper" id="main-wrapper">
     <div id="navigation_bar">
+    <div id="back-btn" onclick="backPage()"">
+        <img src="img/icons/arrow-left.svg" alt="">
+    </div>
     <div id="logo">
         FrontLab
     </div>
