--- a/about_page.html
+++ b/about_page.html
@@ -10,19 +10,22 @@
     <script src="https://unpkg.com/scrollreveal@4"></script>
     <title>FrontLand - студия web разработки</title>
 </head>
-<body>
+<body class="body">
 <div class="sidebar" id="sidebar">
     <p class="sidebar-title">Навигация по сайту</p>
     <ul class="menu-list">
         <a href="index.html"><li class="list-el" id="list-el">Главная страница</li></a>
         <a href="about_page.html"><li class="list-el" id="list-el">О компании</li></a>
-        <a href="services.html"><li class="list-el" id="list-el">Наши услуги</li></a>
+        <a href="instruments.html"><li class="list-el" id="list-el">Разработка</li></a>
         <a href="#"><li class="list-el" id="list-el">menu element</li></a>
         <a href="#"><li class="list-el" id="list-el">menu element</li></a>
     </ul>
 </div>
 <div class="wrapper" id="about_page">
     <div id="navigation_bar">
+    <div id="back-btn" onclick="backPage()"">
+        <img src="img/icons/arrow-left.svg" alt="">
+    </div>
     <div id="logo">
         FrontLab
     </div>
@@ -33,8 +36,8 @@
     <div class="container history">
         <div class="block" id="about_company">
             <p class="block__title">О нашей студии</p>
-            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, at! Repellendus unde quasi, repudiandae iusto veniam consequuntur iure facere cum officia repellat, expedita laboriosam voluptatibus, quod ducimus officiis aspernatur animi.</p>
-            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem corrupti labore quae accusamus doloribus fugiat, eius aspernatur animi aut aperiam soluta itaque harum numquam quo ex minima distinctio. Dolores, perspiciatis.</p>
+            <p class="text">FrontLab берет своя начало из далекого 2016 года, когда web разработка только набирала обороты. Наш главный разработчик в то время только начинал изучать азы frontend'a. Медленно, но уверенно шагая к большой цели.</p>
+            <p class="text">Со временем появилась команда, которых объединяют общие интересы и цели. Каждый из нас знает свою роль в этом сложном механизме и делает все, чтобы он работал безотказно.</p>
         </div>
         <div class="block">
             <p class="block__title">Наша команда</p>
@@ -50,7 +53,7 @@
                         </div>
                     </div>
                     <div class="developer__description">
-                        <p class="dev-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam vel velit cumque, odio aspernatur cum odit ex totam, nesciunt exercitationem laboriosam, perferendis ipsam doloribus vitae? Nulla dicta quasi iste odit.</p>
+                        <p class="dev-description">Занимается вёрсткой сайта и его компонентов по готовому макету. Создает формы, динамичные элементы страницы. Подключает и использует готовые библиотеки различной направленности.</p>
                     </div>
                 </div>
                 <div class="team__developer" id="javascript-dev">
@@ -64,7 +67,7 @@
                         </div>
                     </div>
                     <div class="developer__description">
-                        <p class="dev-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam vel velit cumque, odio aspernatur cum odit ex totam, nesciunt exercitationem laboriosam, perferendis ipsam doloribus vitae? Nulla dicta quasi iste odit.</p>
+                        <p class="dev-description">Занимается програмной составляющей веб страниц и сайтов. Работает с библиотеками и пакетами. Добавляет динамичность и фунционал на сайт.</p>
                     </div>
                 </div>
                 <div class="team__developer" id="dsigner-dev">
@@ -78,7 +81,7 @@
                         </div>
                     </div>
                     <div class="developer__description">
-                        <p class="dev-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam vel velit cumque, odio aspernatur cum odit ex totam, nesciunt exercitationem laboriosam, perferendis ipsam doloribus vitae? Nulla dicta quasi iste odit.</p>
+                        <p class="dev-description">Занимается разработкой макетов веб страниц. От её работы зависят последующие этапы разработки. Макет должен соответсовать многим требованиям как заказчика, так и разработки в целом.</p>
                     </div>
                 </div>
                 <div class="team__developer" id="smm-dev">
@@ -92,7 +95,7 @@
                         </div>
                     </div>
                     <div class="developer__description">
-                        <p class="dev-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam vel velit cumque, odio aspernatur cum odit ex totam, nesciunt exercitationem laboriosam, perferendis ipsam doloribus vitae? Nulla dicta quasi iste odit.</p>
+                        <p class="dev-description">Занимается прдвижением сайтов после их запуска в интернет. Анализирует входящий и исходящий трафик. Помогает наполнить сайт необходимым контентом, который сможет помочь сайту занять необходимое место  в глобальном поиске.</p>
                     </div>
                 </div>
             </div>
