--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 <div class="wrapper" id="main-wrapper">
     <div id="navigation_bar">
     <div id="back-btn" onclick="backPage()"">
-        <img src="img/icons/arrow-left.svg" alt="">
+        <img src="img/icons/UI/arrow-left.svg" alt="">
     </div>
     <div id="logo">
-        FrontLab
+        Front<span class="accent">Lab</span>
     </div>
     <div id="sidebar-btn" onclick="openSidebar()">
-        <img src="img/icons/menu.svg" alt="sidebar button" id="sidebar-btn-icon">
+        <img src="img/icons/UI/menu.svg" alt="sidebar button" id="sidebar-btn-icon">
     </div>
 </div>
     <div class="cover" id="cover">
@@ -38,14 +38,14 @@
             <p class="main-title">Создадим сайт<br>твоей мечты</p>
             <p class="main-subtitle">студия web разработки</p>
         </div>
-        <img class="cover-image" src="img/saly.png" alt="">
+        <img class="cover-image" src="img/main-image.svg" alt="">
     </div>
     <div class="bottom">
         <div class="bottom-wrapper">
             <p class="bottom-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum dicta molestiae velit perferendis neque molestias, facere quos sunt ad, provident animi, et quo laborum veniam! Voluptatibus qui eveniet aut id?</p>
             <div id="get-started-btn-wrapper">
                 <button id="get-started-btn">Далее</button>
-                <img src="img/icons/arrow-right-1.svg" alt="">
+                <img src="img/icons/UI/arrow-right-1.svg" alt="">
             </div>
         </div>
     </div>
